--- a/about.html
+++ b/about.html
@@ -5,8 +5,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About — Katherine Isabela Hsiung Chen</title>
-  <link rel="icon" type="image/svg+xml"
-    href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' font-family='Georgia, serif' font-size='36' font-weight='700' text-anchor='middle' fill='%230d347e'%3EKC%3C/text%3E%3C/svg%3E">
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E
+%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E
+%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' 
+font-family='Georgia, serif' font-size='36' font-weight='700' fill='%230d347e'%3EKC%3C/text%3E
+%3C/svg%3E">
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600;700&display=swap"
     rel="stylesheet">
@@ -231,9 +234,8 @@
     }
 
     .race-car {
-      right: -40px;
-      transform: scaleX(-1);
-      animation: race-move 3.2s cubic-bezier(.22, .7, .18, 1) infinite
+      left: -40px;
+      animation: race-move 2.8s cubic-bezier(.22, .7, .18, 1) infinite
     }
 
     @keyframes race-move {
@@ -241,20 +243,20 @@
         transform: scaleX(-1) translateX(0)
       }
 
-      15% {
-        transform: scaleX(-1) translateX(-16%)
+      12% {
+        transform: translateX(16%)
       }
 
       40% {
-        transform: scaleX(-1) translateX(-50%)
+        transform: translateX(55%)
       }
 
-      70% {
-        transform: scaleX(-1) translateX(-90%)
+      75% {
+        transform: translateX(102%)
       }
 
       100% {
-        transform: scaleX(-1) translateX(-112%)
+        transform: translateX(118%)
       }
     }
 
