--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Katherine Isabela Hsiung Chen — Pole Position 🏁</title>
-  <link rel="icon" type="image/svg+xml"
-    href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' font-family='Georgia, serif' font-size='36' font-weight='700' text-anchor='middle' fill='%230d347e'%3EKC%3C/text%3E%3C/svg%3E">
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E
+%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E
+%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' 
+font-family='Georgia, serif' font-size='36' font-weight='700' fill='%230d347e'%3EKC%3C/text%3E
+%3C/svg%3E">
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600;700&display=swap"
     rel="stylesheet">
@@ -203,29 +206,29 @@
       display: none;
       align-items: center;
       justify-content: center;
-      background: color-mix(in oklab, var(--bg) 40%, transparent);
-      backdrop-filter: blur(4px);
+      background: color-mix(in oklab, var(--bg) 30%, transparent);
+      backdrop-filter: blur(2px);
       z-index: 9
     }
 
     .sequence {
       display: grid;
-      gap: 10px;
+      gap: 12px;
       justify-items: center
     }
 
     .start-lights {
       display: flex;
-      gap: 10px;
+      gap: 12px;
       background: color-mix(in oklab, var(--bg) 86%, #fff);
-      padding: 10px 14px;
+      padding: 12px 16px;
       border-radius: 999px;
       border: 1px solid var(--ring)
     }
 
     .light {
-      width: 22px;
-      height: 22px;
+      width: 26px;
+      height: 26px;
       border-radius: 50%;
       background: #2b2b2b;
       border: 1px solid rgba(0, 0, 0, .2)
@@ -246,8 +249,8 @@
     }
 
     .flag-svg {
-      width: 60px;
-      height: 38px;
+      width: 64px;
+      height: 40px;
       display: none
     }
 
@@ -392,6 +395,7 @@
   <script src="assets/js/confetti.js"></script>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
+
     const root = document.documentElement;
     const saved = localStorage.getItem('kc-theme'); if (saved) { root.setAttribute('data-theme', saved); }
 
@@ -399,7 +403,7 @@
       if (name === 'carlos') { root.setAttribute('data-theme', 'carlos'); localStorage.setItem('kc-theme', 'carlos'); startThemedConfetti('carlos'); }
       if (name === 'lando') { root.setAttribute('data-theme', 'lando'); localStorage.setItem('kc-theme', 'lando'); startThemedConfetti('lando'); }
     }
-    document.querySelectorAll('[data-theme]').forEach(b => b.addEventListener('click', () => setThemeAndConfetti(b.dataset.theme)));
+    document.querySelectorAll('button[data-theme]').forEach(b => b.addEventListener('click', () => setThemeAndConfetti(b.dataset.theme)));
     document.getElementById('resetTheme').addEventListener('click', () => { root.removeAttribute('data-theme'); localStorage.removeItem('kc-theme'); startEmojiConfetti(); });
 
     const lights = [...document.querySelectorAll('.start-lights .light')];
@@ -419,10 +423,7 @@
             lights.forEach(l => l.classList.add('on', 'green'));
             flagSVG.classList.remove('flag-wave'); void flagSVG.offsetWidth; flagSVG.classList.add('flag-wave');
             startNormalConfetti();
-            setTimeout(() => {
-              lights.forEach(l => l.classList.remove('on', 'green'));
-              overlay.style.display = 'none';
-            }, 1100);
+            setTimeout(() => { lights.forEach(l => l.classList.remove('on', 'green')); overlay.style.display = 'none'; }, 1100);
           }, 450);
         }
       }, 250);
