--- a/about.html
+++ b/about.html
@@ -5,11 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About — Katherine Isabela Hsiung Chen</title>
-  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E
-%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E
-%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' 
-font-family='Georgia, serif' font-size='36' font-weight='700' fill='%230d347e'%3EKC%3C/text%3E
-%3C/svg%3E">
+  <link rel="icon" type="image/svg+xml"
+    href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Georgia, serif' font-size='36' font-weight='700' fill='%230d347e'%3EKC%3C/text%3E%3C/svg%3E">
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600;700&display=swap"
     rel="stylesheet">
@@ -234,8 +231,9 @@ font-family='Georgia, serif' font-size='36' font-weight='700' fill='%230d347e'%3
     }
 
     .race-car {
-      left: -40px;
-      animation: race-move 2.8s cubic-bezier(.22, .7, .18, 1) infinite
+      right: -40px;
+      transform: scaleX(-1);
+      animation: race-move 2.2s cubic-bezier(.25, .7, .2, 1) infinite
     }
 
     @keyframes race-move {
@@ -243,20 +241,20 @@ font-family='Georgia, serif' font-size='36' font-weight='700' fill='%230d347e'%3
         transform: scaleX(-1) translateX(0)
       }
 
-      12% {
-        transform: translateX(16%)
+      15% {
+        transform: scaleX(-1) translateX(-14%)
       }
 
-      40% {
-        transform: translateX(55%)
+      45% {
+        transform: scaleX(-1) translateX(-52%)
       }
 
-      75% {
-        transform: translateX(102%)
+      80% {
+        transform: scaleX(-1) translateX(-108%)
       }
 
       100% {
-        transform: translateX(118%)
+        transform: scaleX(-1) translateX(-120%)
       }
     }
 
@@ -338,14 +336,25 @@ font-family='Georgia, serif' font-size='36' font-weight='700' fill='%230d347e'%3
   <script src="assets/js/confetti.js"></script>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
+
     const root = document.documentElement;
-    const saved = localStorage.getItem('kc-theme'); if (saved) { root.setAttribute('data-theme', saved); }
+    const saved = localStorage.getItem('kc-theme'); if (saved) root.setAttribute('data-theme', saved);
+
     function setThemeAndConfetti(name) {
       if (name === 'carlos') { root.setAttribute('data-theme', 'carlos'); localStorage.setItem('kc-theme', 'carlos'); startThemedConfetti('carlos'); }
       if (name === 'lando') { root.setAttribute('data-theme', 'lando'); localStorage.setItem('kc-theme', 'lando'); startThemedConfetti('lando'); }
     }
-    document.querySelectorAll('[data-theme]').forEach(b => b.addEventListener('click', () => setThemeAndConfetti(b.dataset.theme)));
-    document.getElementById('resetTheme').addEventListener('click', () => { root.removeAttribute('data-theme'); localStorage.removeItem('kc-theme'); startEmojiConfetti(); });
+
+    document.querySelectorAll('.driver-bar button.btn[data-theme]').forEach(b =>
+      b.addEventListener('click', (e) => { e.stopPropagation(); setThemeAndConfetti(b.dataset.theme); })
+    );
+
+    document.getElementById('resetTheme').addEventListener('click', (e) => {
+      e.stopPropagation();
+      root.removeAttribute('data-theme');
+      localStorage.removeItem('kc-theme');
+      startEmojiConfetti();
+    });
   </script>
 </body>
 
