--- a/about.html
+++ b/about.html
@@ -217,6 +217,17 @@
       overflow: hidden
     }
 
+    .race-line::after {
+      content: "";
+      position: absolute;
+      right: 0;
+      bottom: -3px;
+      height: 3px;
+      width: 0;
+      background: var(--accent);
+      animation: track-grow 2.2s cubic-bezier(.22, .7, .18, 1) infinite
+    }
+
     .race-car,
     .race-flag {
       position: absolute;
@@ -233,7 +244,7 @@
     .race-car {
       right: -40px;
       transform: scaleX(-1);
-      animation: race-move 2.2s cubic-bezier(.25, .7, .2, 1) infinite
+      animation: race-move 2.2s cubic-bezier(.22, .7, .18, 1) infinite
     }
 
     @keyframes race-move {
@@ -241,20 +252,34 @@
         transform: scaleX(-1) translateX(0)
       }
 
-      15% {
-        transform: scaleX(-1) translateX(-14%)
+      20% {
+        transform: scaleX(-1) translateX(-18%)
       }
 
       45% {
-        transform: scaleX(-1) translateX(-52%)
+        transform: scaleX(-1) translateX(-50%)
       }
 
       80% {
-        transform: scaleX(-1) translateX(-108%)
+        transform: scaleX(-1) translateX(-105%)
       }
 
       100% {
-        transform: scaleX(-1) translateX(-120%)
+        transform: scaleX(-1) translateX(-125%)
+      }
+    }
+
+    @keyframes track-grow {
+      0% {
+        width: 0
+      }
+
+      80% {
+        width: 100%
+      }
+
+      100% {
+        width: 100%
       }
     }
 
@@ -336,25 +361,14 @@
   <script src="assets/js/confetti.js"></script>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
-
     const root = document.documentElement;
-    const saved = localStorage.getItem('kc-theme'); if (saved) root.setAttribute('data-theme', saved);
-
+    const saved = localStorage.getItem('kc-theme'); if (saved) { root.setAttribute('data-theme', saved); }
     function setThemeAndConfetti(name) {
       if (name === 'carlos') { root.setAttribute('data-theme', 'carlos'); localStorage.setItem('kc-theme', 'carlos'); startThemedConfetti('carlos'); }
       if (name === 'lando') { root.setAttribute('data-theme', 'lando'); localStorage.setItem('kc-theme', 'lando'); startThemedConfetti('lando'); }
     }
-
-    document.querySelectorAll('.driver-bar button.btn[data-theme]').forEach(b =>
-      b.addEventListener('click', (e) => { e.stopPropagation(); setThemeAndConfetti(b.dataset.theme); })
-    );
-
-    document.getElementById('resetTheme').addEventListener('click', (e) => {
-      e.stopPropagation();
-      root.removeAttribute('data-theme');
-      localStorage.removeItem('kc-theme');
-      startEmojiConfetti();
-    });
+    document.querySelectorAll('button[data-theme]').forEach(b => b.addEventListener('click', () => setThemeAndConfetti(b.dataset.theme)));
+    document.getElementById('resetTheme').addEventListener('click', () => { root.removeAttribute('data-theme'); localStorage.removeItem('kc-theme'); startEmojiConfetti(); });
   </script>
 </body>
 
