--- a/about.html
+++ b/about.html
@@ -153,11 +153,6 @@
       text-align: center
     }
 
-    .center {
-      display: grid;
-      place-items: center
-    }
-
     .driver-bar {
       margin: 8px 0 18px;
       display: flex;
@@ -220,62 +215,45 @@
     .race-line::after {
       content: "";
       position: absolute;
-      right: 0;
+      left: 0;
       bottom: -3px;
       height: 3px;
       width: 0;
       background: var(--accent);
-      animation: track-grow 2.2s cubic-bezier(.22, .7, .18, 1) infinite
+      animation: track-grow 2.6s linear infinite
     }
 
-    .race-car,
     .race-flag {
       position: absolute;
-      top: -6px;
+      left: 2px;
+      top: -10px;
       font-size: 22px;
       line-height: 1
     }
 
-    .race-flag {
-      left: 2px;
-      top: -10px
-    }
-
     .race-car {
-      right: -40px;
+      position: absolute;
+      top: -6px;
+      font-size: 22px;
+      line-height: 1;
+      left: calc(100% - 24px);
       transform: scaleX(-1);
-      animation: race-move 2.2s cubic-bezier(.22, .7, .18, 1) infinite
+      animation: car-move 2.6s linear infinite
     }
 
-    @keyframes race-move {
+    @keyframes car-move {
       0% {
-        transform: scaleX(-1) translateX(0)
-      }
-
-      20% {
-        transform: scaleX(-1) translateX(-18%)
-      }
-
-      45% {
-        transform: scaleX(-1) translateX(-50%)
-      }
-
-      80% {
-        transform: scaleX(-1) translateX(-105%)
+        left: calc(100% - 24px)
       }
 
       100% {
-        transform: scaleX(-1) translateX(-125%)
+        left: -40px
       }
     }
 
     @keyframes track-grow {
       0% {
         width: 0
-      }
-
-      80% {
-        width: 100%
       }
 
       100% {
