--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       place-items: center;
       text-align: center;
       padding: 40px 0 28px;
-      min-height: calc(100vh - 64px - 64px);
+      min-height: calc(100vh - 64px - 64px)
     }
 
     .hero h1 {
@@ -205,16 +205,6 @@
       padding: 14px 22px;
       border-radius: 14px;
       font-size: 17px
-    }
-
-    .flag-hint {
-      margin-top: 18px;
-      color: var(--muted);
-      font-weight: 700;
-      display: flex;
-      gap: 10px;
-      justify-content: center;
-      align-items: center
     }
 
     .sequence-overlay {
@@ -298,14 +288,29 @@
       }
     }
 
+
+    footer {
+      border-top: 1px solid var(--ring);
+      padding: 18px 0;
+      color: var(--muted);
+      text-align: center;
+      margin-top: auto
+    }
+
     .flag-launch {
       position: fixed;
       right: 18px;
       bottom: 18px;
       z-index: 10;
-      display: grid;
-      gap: 8px;
-      justify-items: center
+      display: flex;
+      align-items: center;
+      gap: 10px
+    }
+
+    .flag-label {
+      color: var(--muted);
+      font-weight: 700;
+      line-height: 1
     }
 
     .flag-btn {
@@ -322,14 +327,6 @@
       background: #2a2a2a;
       color: #fff;
       border-color: #444
-    }
-
-    footer {
-      border-top: 1px solid var(--ring);
-      padding: 18px 0;
-      color: var(--muted);
-      text-align: center;
-      margin-top: auto
     }
   </style>
 </head>
@@ -371,10 +368,6 @@
         <a class="btn" href="about.html">About</a>
         <a class="btn" href="contact.html">Contact</a>
       </div>
-
-      <div class="flag-hint">
-        <span>Press the checkered flag for the start lights</span> <span aria-hidden="true">⬇️</span>
-      </div>
     </div>
   </section>
 
@@ -384,6 +377,7 @@
   </footer>
 
   <div class="flag-launch" aria-live="polite">
+    <span class="flag-label">Start the sequence →</span>
     <button class="flag-btn" id="flagGo" title="Start lights + wave flag">🏁</button>
   </div>
 
